add header and section - change readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <header>
+    <figure><img src="assets\images\logo-laboratoria.svg" alt="logo laboratoria"></figure>
+    <nav>
+      <ul>
+        <li><a href="#">inicio</a></li>
+        <li><a href="#">servicios</a></li>
+        <li><a href="#">premios</a></li>
+        <li><a href="#"></a>contactos</li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <figure>
+      <img src="assets\images\square-laboratoria.png" alt="logo laboratoria">
+      <h1>Bienvenido a esta prueba</h1>
+      <button>conoce más</button>
+    </figure>
+  </section>
 </body>
 </html>
