final structure html

--- a/index.html
+++ b/index.html
@@ -25,5 +25,25 @@
       <button>conoce más</button>
     </figure>
   </section>
+  <section>
+    <div>
+      <span class="icon-camera"></span>
+      <h3>servicios mailing</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat architecto iure fugit expedita laborum distinctio quod fuga voluptatem ipsam rem, dolore asperiores odit quis aliquid ullam a aut quos voluptas.</p>
+    </div>
+    <div>
+      <span class="icon-envelop"></span>
+      <h3>servicios mailing</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus unde architecto atque reiciendis nam exercitationem iure dicta est voluptatum modi iste omnis, vitae quas ipsam odit necessitatibus? Laudantium, eius voluptates.</p>
+    </div>
+    <div>
+      <span class="icon-display"></span>
+      <h3>servicios mailing</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos deserunt dolorum dignissimos inventore totam cupiditate nihil soluta similique dolor eligendi quisquam ut vitae accusantium perferendis animi, minima ex! Ea, minus?</p>
+    </div>
+  </section>
+  <footer>
+    <p>Realizado por: Joalbert A. González</p>
+  </footer>
 </body>
 </html>
