add style text-uppercase and set body

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bienvenido a esta prueba</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="assets/icons/icomoon/style.css">  
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -10,35 +11,35 @@
   <header>
     <figure><img src="assets\images\logo-laboratoria.svg" alt="logo laboratoria"></figure>
     <nav>
-      <ul>
+      <ul class="text-uppercase">
         <li><a href="#">inicio</a></li>
         <li><a href="#">servicios</a></li>
         <li><a href="#">premios</a></li>
-        <li><a href="#"></a>contactos</li>
+        <li><a href="#">contactos</a></li>
       </ul>
     </nav>
   </header>
   <section>
     <figure>
       <img src="assets\images\square-laboratoria.png" alt="logo laboratoria">
-      <h1>Bienvenido a esta prueba</h1>
-      <button>conoce más</button>
+      <h1 class="text-uppercase">Bienvenido a esta prueba</h1>
+      <button class="text-uppercase">conoce más</button>
     </figure>
   </section>
   <section>
     <div>
       <span class="icon-camera"></span>
-      <h3>servicios mailing</h3>
+      <h3 class="text-uppercase">servicios mailing</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat architecto iure fugit expedita laborum distinctio quod fuga voluptatem ipsam rem, dolore asperiores odit quis aliquid ullam a aut quos voluptas.</p>
     </div>
     <div>
       <span class="icon-envelop"></span>
-      <h3>servicios mailing</h3>
+      <h3 class="text-uppercase">servicios mailing</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus unde architecto atque reiciendis nam exercitationem iure dicta est voluptatum modi iste omnis, vitae quas ipsam odit necessitatibus? Laudantium, eius voluptates.</p>
     </div>
     <div>
       <span class="icon-display"></span>
-      <h3>servicios mailing</h3>
+      <h3 class="text-uppercase">servicios mailing</h3>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos deserunt dolorum dignissimos inventore totam cupiditate nihil soluta similique dolor eligendi quisquam ut vitae accusantium perferendis animi, minima ex! Ea, minus?</p>
     </div>
   </section>
