--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <figure><img src="assets\images\logo-laboratoria.svg" alt="logo laboratoria"></figure>
-    <nav>
+    <figure class="box-header"><img class="logo-header" src="assets\images\logo-laboratoria.svg" alt="logo laboratoria"></figure>
+    <nav class="box-header">
       <ul class="text-uppercase">
         <li><a href="#">inicio</a></li>
         <li><a href="#">servicios</a></li>
