add style footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <section>
     <figure>
-      <img src="assets\images\square-laboratoria.png" alt="logo laboratoria">
+      <img class="logo-section" src="assets\images\square-laboratoria.png" alt="logo laboratoria">
       <h1 class="text-uppercase">Bienvenido a esta prueba</h1>
       <button class="text-uppercase">conoce más</button>
     </figure>
